--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'org.jsoup:jsoup:1.10.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
 }
