--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
     implementation 'com.prof.rssparser:rssparser:2.1.1'
 
     testImplementation 'org.robolectric:robolectric:4.3'
-    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'androidx.test:core:1.0.0'
+
+    implementation 'org.apache.commons:commons-lang3:3.10'
 }
